<resources>
    <string name="app_name">Lesson4.14</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_menu_item_setting">Setting</string>
    <string name="txt_menu_item_done">Done</string>
    <string name="txt_menu_item_edit">Edit</string>
    <string name="txt_menu_item_back">Back</string>
    <string name="text_btn_done">Done</string>
    <string name="hint_full_name">Khanh Nguyen Duy...</string>
    <string name="hint_age">20</string>
    <string name="text_lable_full_name">Full Name:</string>
    <string name="text_label_age">Age:</string>
    <string name="text_editing">Edit Student Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>