<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24"
        android:title="@string/txt_menu_item_edit"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24"
        android:title="@string/txt_action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_white_24"
        android:title="@string/txt_menu_item_setting"
        app:showAsAction="ifRoom|withText" />
</menu>