<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_lable_full_name"
        android:textColor="#3F51B5"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="@+id/edit_full_name"
        app:layout_constraintEnd_toStartOf="@+id/edit_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_full_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_label_age"
        android:textColor="#3F51B5"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="@+id/edit_age"
        app:layout_constraintEnd_toStartOf="@+id/edit_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_age" />

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#3F51B5"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#3F51B5"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="@+id/edit_full_name"
        app:layout_constraintStart_toStartOf="@+id/edit_full_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_full_name"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>